pterodactyl/ctrlpanelgg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctrlpanelgg
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: panel
  template:
    metadata:
      labels:
        app: panel
    spec:
      containers:
        - name: panel
          image: ghcr.io/ctrlpanel-gg/panel:1.1.1
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    [...]
          volumeMounts:
            - name: var
              mountPath: /app/var/
            - name: nginx
              mountPath: /etc/nginx/http.d/
            - name: logs
              mountPath: /app/storage/logs
      volumes:
        - name: var
          persistentVolumeClaim:
            claimName: panel-var
        - name: nginx
          persistentVolumeClaim:
            claimName: panel-nginx
        - name: logs
          persistentVolumeClaim:
            claimName: panel-logs
