pterodactyl/ctrlpanelgg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctrlpanelgg
spec:
  type: ClusterIP
  selector:
    app: ctrlpanelgg
  ports:
    - name: http
      port: 80
      targetPort: 80
