pterodactyl/ctrlpanelgg/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ctrlpanelgg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik
      sectionName: https
  hostnames:
    - ${CTRLPANELGG_PANEL_FQDN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ctrlpanelgg
          port: 80
